--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,9 +22,11 @@
   }
   
   
-  
-  
   /* For demonstration purposes only: */
   body { font-size: 3.5em }
   h1 { font-size: 0.5em }
   
+  main{
+    max-width: 1440px;
+    margin: auto;
+  }
