--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .wave {
     animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
     animation-duration: 2.5s;        /* Change to speed up or slow down */
@@ -23,10 +24,14 @@
   
   
   /* For demonstration purposes only: */
-  body { font-size: 3.5em }
-  h1 { font-size: 0.5em }
+  body { font-size: 1em }
+  h1 { font-size: 2.5em }
   
   main{
     max-width: 1440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: auto;
+
   }
